crates/nash-can/src/snapshots/nash_can__module__tests__case_with_ctor_patterns.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Maybe exposing (Maybe(..))\n\nf x =\n    case x of\n        Just y -> y\n        Nothing -> 0\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Normal,
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Everything(
        Region {
            start: Position {
                line: 1,
                column: 22,
            },
            end: Position {
                line: 1,
                column: 26,
            },
        },
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 9,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 5,
                        column: 1,
                    },
                    end: Position {
                        line: 5,
                        column: 2,
                    },
                },
                value: "f",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 5,
                            column: 3,
                        },
                        end: Position {
                            line: 5,
                            column: 4,
                        },
                    },
                    value: Var(
                        "x",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 6,
                        column: 5,
                    },
                    end: Position {
                        line: 9,
                        column: 1,
                    },
                },
                value: Case {
                    scrutinee: Located {
                        region: Region {
                            start: Position {
                                line: 6,
                                column: 10,
                            },
                            end: Position {
                                line: 6,
                                column: 11,
                            },
                        },
                        value: VarLocal(
                            "x",
                        ),
                    },
                    branches: [
                        CaseBranch {
                            pattern: Located {
                                region: Region {
                                    start: Position {
                                        line: 7,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 7,
                                        column: 16,
                                    },
                                },
                                value: Constructor(
                                    PatternCtor {
                                        reference: ConstructorName {
                                            home: ModuleName {
                                                package: None,
                                                name: "Maybe",
                                            },
                                            union: "Maybe",
                                            name: "Just",
                                        },
                                        union: Union {
                                            kind: Arrow(
                                                Type,
                                                Type,
                                            ),
                                            context: [],
                                            name: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 0,
                                                        column: 0,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 0,
                                                    },
                                                },
                                                value: "Maybe",
                                            },
                                            parameters: [
                                                "a",
                                            ],
                                            ctors: [
                                                Ctor {
                                                    labels: None,
                                                    name: "Just",
                                                    index: 0,
                                                    arity: 1,
                                                    arguments: [
                                                        Located {
                                                            region: Region {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 0,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 0,
                                                                },
                                                            },
                                                            value: Var(
                                                                "a",
                                                            ),
                                                        },
                                                    ],
                                                },
                                                Ctor {
                                                    labels: None,
                                                    name: "Nothing",
                                                    index: 1,
                                                    arity: 0,
                                                    arguments: [],
                                                },
                                            ],
                                            alternatives: 2,
                                            options: Normal,
                                        },
                                        index: 0,
                                        arguments: [
                                            PatternCtorArg {
                                                index: 0,
                                                typ: Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 0,
                                                            column: 0,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 0,
                                                        },
                                                    },
                                                    value: Var(
                                                        "a",
                                                    ),
                                                },
                                                pattern: Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 7,
                                                            column: 14,
                                                        },
                                                        end: Position {
                                                            line: 7,
                                                            column: 15,
                                                        },
                                                    },
                                                    value: Var(
                                                        "y",
                                                    ),
                                                },
                                            },
                                        ],
                                        options: Normal,
                                        alternatives: 2,
                                    },
                                ),
                            },
                            body: Located {
                                region: Region {
                                    start: Position {
                                        line: 7,
                                        column: 19,
                                    },
                                    end: Position {
                                        line: 7,
                                        column: 20,
                                    },
                                },
                                value: VarLocal(
                                    "y",
                                ),
                            },
                        },
                        CaseBranch {
                            pattern: Located {
                                region: Region {
                                    start: Position {
                                        line: 8,
                                        column: 9,
                                    },
                                    end: Position {
                                        line: 8,
                                        column: 17,
                                    },
                                },
                                value: Constructor(
                                    PatternCtor {
                                        reference: ConstructorName {
                                            home: ModuleName {
                                                package: None,
                                                name: "Maybe",
                                            },
                                            union: "Maybe",
                                            name: "Nothing",
                                        },
                                        union: Union {
                                            kind: Arrow(
                                                Type,
                                                Type,
                                            ),
                                            context: [],
                                            name: Located {
                                                region: Region {
                                                    start: Position {
                                                        line: 0,
                                                        column: 0,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 0,
                                                    },
                                                },
                                                value: "Maybe",
                                            },
                                            parameters: [
                                                "a",
                                            ],
                                            ctors: [
                                                Ctor {
                                                    labels: None,
                                                    name: "Just",
                                                    index: 0,
                                                    arity: 1,
                                                    arguments: [
                                                        Located {
                                                            region: Region {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 0,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 0,
                                                                },
                                                            },
                                                            value: Var(
                                                                "a",
                                                            ),
                                                        },
                                                    ],
                                                },
                                                Ctor {
                                                    labels: None,
                                                    name: "Nothing",
                                                    index: 1,
                                                    arity: 0,
                                                    arguments: [],
                                                },
                                            ],
                                            alternatives: 2,
                                            options: Normal,
                                        },
                                        index: 1,
                                        arguments: [],
                                        options: Normal,
                                        alternatives: 2,
                                    },
                                ),
                            },
                            body: Located {
                                region: Region {
                                    start: Position {
                                        line: 8,
                                        column: 20,
                                    },
                                    end: Position {
                                        line: 8,
                                        column: 21,
                                    },
                                },
                                value: Int(
                                    0,
                                ),
                            },
                        },
                    ],
                },
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
