crates/nash-can/src/snapshots/nash_can__module__tests__closed_union_does_not_leak_ctors.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Maybe exposing (Maybe(..))\n\nx = Just\n"
info: diagnostic
---
nash::names::not_found_ctor

  × Unknown variant `Just`.
   ╭─[src/Main.nash:5:5]
 4 │ 
 5 │ x = Just
   ·     ────
   ╰────
  help: Similar names:

            Primitive.B
            Primitive.I
            Primitive.List
            Primitive.Map
