crates/nash-can/src/snapshots/nash_can__module__tests__ctor_duplicate_label_error.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\ntype packet = Packet { z : unit, z : unit }\n"
---
[
    DuplicateField {
        name: "z",
        first: Region {
            start: Position {
                line: 2,
                column: 24,
            },
            end: Position {
                line: 2,
                column: 25,
            },
        },
        second: Region {
            start: Position {
                line: 2,
                column: 34,
            },
            end: Position {
                line: 2,
                column: 35,
            },
        },
    },
]
